[package]
name = "dirus"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
iced-x86 = "1.21.0"
libc = "0.2.171"
memmap2 = "0.9.5"
msvc-demangler = "0.11.0"
object = "0.36.7"
page_size = "0.6.0"
pdb = "0.8.0"
rayon = "1.10.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
